[package]
name = "rtow"
description = "Implementation of the Ray Tracing in One Weekend project"
version = "0.1.0"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "2.31.2" features = ["yaml"]}
chan = "0.1.21"
image = "0.18.0"
nalgebra = "0.14.1"
pbr = "1.0.1"
rand = "0.4.2"
regex = "1.0.0"

