[package]
name = "rtow"
description = "Implementation of the Ray Tracing in One Weekend project"
version = "0.1.0"
authors = ["Sergiu Puscas <srg.pscs@gmail.com>"]
license = "MIT"

[dependencies]
chan = "0.1.21"
clap = { version = "2.31.2", features = ["yaml"]}
image = "0.18.0"
log = "0.4.1"
nalgebra = "0.14.4"
num_cpus = "1.8.0"
pbr = "1.0.1"
pretty_env_logger = "0.2.2"
rand = "0.4.2"
regex = "1.0.0"
